<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/registration_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="18dp"
        android:paddingBottom="24dp"
        tools:context=".activities.RegisterActivity">

        <androidx.appcompat.widget.AppCompatImageButton
            android:id="@+id/btn_back"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/ic_back"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/back"
            android:textColor="@color/blue"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/btn_back"
            app:layout_constraintStart_toEndOf="@id/btn_back"
            app:layout_constraintTop_toTopOf="@id/btn_back" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/registration"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="@id/tv_back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_hint"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/please_enter_the_required_details"
            android:textColor="@color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_title" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_first_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="32dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/first_name"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_hint" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_last_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/last_name"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_first_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_phone_number"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/phone_number"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_last_name" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_email"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/email_address"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_phone_number" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_email" />

        <androidx.appcompat.widget.AppCompatEditText
            android:id="@+id/et_password_confirm"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:paddingHorizontal="8dp"
            android:paddingVertical="12dp"
            android:text=""
            android:textColor="@color/white"
            android:textColorHint="@color/gray"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password" />

        <androidx.appcompat.widget.AppCompatTextView
            android:id="@+id/tv_registration_type"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/registration_type_hint"
            android:textColor="@color/white"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_password_confirm" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_customer"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:backgroundTint="@color/register_buttons"
            android:text="@string/customer"
            android:textColor="@color/register_buttons_text"
            android:textSize="12sp"
            app:layout_constraintStart_toStartOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/tv_registration_type" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_merchant"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:backgroundTint="@color/register_buttons"
            android:padding="8dp"
            android:text="@string/merchant"
            android:textColor="@color/register_buttons_text"
            android:textSize="12sp"
            app:layout_constraintEnd_toEndOf="@id/btn_register"
            app:layout_constraintTop_toBottomOf="@id/tv_registration_type" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_register"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:background="@drawable/bordered_background"
            android:backgroundTint="@color/blue"
            android:padding="8dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="@id/et_password_confirm"
            app:layout_constraintStart_toStartOf="@id/et_password_confirm"
            app:layout_constraintTop_toBottomOf="@id/btn_customer" />

        <ProgressBar
            android:id="@+id/progress_bar_registration"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>
